# trame-ci-test

./: CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg
bundles/desktop/macOS/: setup.py
bundles/desktop/windows/: README.md  create_exe.bat  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
tests/: test_import.py
trame/modules/: trame_app.py
trame/widgets/: trame_app.py
trame_app/app/: engine.py  jupyter.py  ui.py
trame_app/module/: __init__.py
vue-components/: package.json  vue.config.js
