[metadata]
name = trame-app
version = 1.0.0
description = An example Trame application
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Trame Developer
license = BSD License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame>=2.0.0rc2
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck

[options.entry_points]
console_scripts =
    trame-app = trame_app:main
jupyter_serverproxy_servers =
    trame-app = trame_app.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
